--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
 
     <div id="videos">
-        <video class="video-player" id="user1v" autoplay playsinline></video>
-        <!-- <audio class="video-player" id="user1a" autoplay ></audio> -->
-        <video class="video-player" id="user2v" autoplay playsinline></video>
-        <audio class="video-player" id="audioRemoteUser" autoplay ></audio>
+        <video class="video-player" id="user-1" autoplay playsinline></video>
+        <video class="video-player" id="user-2" autoplay playsinline></video>
     </div>
 
     <div id="controls">
